@@ -5,6 +5,7 @@ E(OP_AltCurrency)
 E(OP_AltCurrencySell)
 E(OP_Animation)
 E(OP_ApplyPoison)
+E(OP_AugmentInfo)
 E(OP_Barter)
 E(OP_BazaarSearch)
 E(OP_BeginCast)
