@@ -4,6 +4,7 @@ E(OP_AdventureMerchantSell)
 E(OP_AltCurrency)
 E(OP_AltCurrencySell)
 E(OP_ApplyPoison)
+E(OP_AugmentInfo)
 E(OP_Barter)
 E(OP_BazaarSearch)
 E(OP_Buff)
